<resources>
    <string name="app_name">CampusLogin</string>
    <string name="campus">CampUs</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="don_t_have_an_account_sing_up">Don\'t have an account? Sing up</string>
    <string name="don_t_have_an_account_sign_up">don_t_have_an_account_sign_up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="student_union_food_delivery"></string>
    <string name="description">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_2">Sign Up.</string>

    <string name="twitterUsername">\@victor</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="emailName">vikingv1@nku.edu</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>