<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="-53dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/bannerText"
                android:textAlignment="center"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banner" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_input" />

            <EditText
                android:id="@+id/confirmPassword_input"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_input" />

            <Button
                android:id="@+id/createAccount_button"
                android:layout_width="380dp"
                android:layout_height="75dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#00f"
                android:text="@string/create_account"
                android:textColor="#fff"
                android:textSize="28sp"
                android:textStyle="bold"
                android:onClick="CreateUserAccount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPassword_input"
                app:layout_constraintVertical_bias="0.644" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>